--- a/styles/modal.module.css
+++ b/styles/modal.module.css
@@ -9,3 +9,15 @@
     align-items: center;
     justify-content: center;
 }
+.modal_content{
+    width: 500px;
+    background-color: #fff;
+    
+    border-radius: 10px;
+    position: relative;
+}
+.close{
+    position: absolute;
+    top: 15px;
+    right: 15px;
+}
