--- a/styles/modal.module.css
+++ b/styles/modal.module.css
@@ -12,7 +12,7 @@
 .modal_content{
     width: 500px;
     background-color: #fff;
-    
+    top: 20px;
     border-radius: 10px;
     position: relative;
 }
